Bugfix v6- THE BIG ONE